refactor(core): 优化代码质量和移除冗余依赖
- 统一导入junit Assertions静态方法
- 使用assertInstanceOf替代assertTrue进行类型检查
- 简化变量命名，使用更简洁的变量名如ele、h、locs等
- 移除未使用的By2类导入和StringUtils依赖
- 使用现代Java语法如toList()替代Collectors.toList()
- 清理测试代码中的冗余断言和验证
- 统一使用By.className替代By2.className
- 移除重复或无效的测试方法
- 优化Lambda表达式参数命名一致性